kyberkucharka-frontend/src/styles/recipe.css
.recipe {
  color: #1a1a1a;
  text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
}

.recipe-title {
  display: block;
  position: relative;

  display: flex;
  justify-content: center;
  align-items: center;

  width: calc(70vw * var(--main-recipe-size));

  background-image: url("/zosit_top2.png");
  background-repeat: no-repeat;
  background-size: calc(70vw * var(--main-recipe-size));
  background-position-y: bottom;

  margin-bottom: 0;
  padding-bottom: 0;

  height: calc(10vw * var(--main-recipe-size));
}

.recipe-title h1 {
  position: absolute;
  bottom: calc(1vw * var(--main-recipe-size));

  max-width: calc(55vw * var(--main-recipe-size));
  max-height: calc(7vw * var(--main-recipe-size));

  text-align: center;

  margin-bottom: 0;
  padding-bottom: 0;

  font-size: calc(3vw * var(--main-recipe-size));
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;

  padding: 0 10px;

  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
}

.recipe-body {
  margin-top: 0px;
  width: calc(56vw * var(--main-recipe-size));
  position: relative;

  background-image: url("/zosit_middle2.png");
  background-repeat: repeat-y;
  background-size: calc(70vw * var(--main-recipe-size));

  font-size: calc(2vw * var(--main-recipe-size));
  /* min-height: 100vh; */

  padding-top: calc(0.7vw * var(--main-recipe-size));
  text-align: left;
  padding-left: calc(9vw * var(--main-recipe-size));
  padding-right: calc(6vw * var(--main-recipe-size));

  padding-bottom: calc(0.5vw * var(--main-recipe-size));
  line-height: calc(3.449vw * var(--main-recipe-size));
  margin-bottom: 80px;
}


.recipe-author {
  margin-top: calc(2vw * var(--main-recipe-size));
  margin-bottom: calc(3.45vw * var(--main-recipe-size));
}

img.recipe-image {
  height: calc(31.4vw * var(--main-recipe-size));
  transform: rotate(-2deg);
  box-shadow: 2px 2px 8px black;
}

.recipe-text > * {
  margin-top: calc(2vw * var(--main-recipe-size));
  margin-bottom: calc(3.45vw * var(--main-recipe-size));
}

.recipe-text h2 {
  transform: translateY(calc(-0.3vw * var(--main-recipe-size)));
}

.recipe-text h3 {
  transform: translateY(calc(-0.15vw * var(--main-recipe-size)));
}

.recipe-section > * {
  margin-top: calc(2vw * var(--main-recipe-size));
  margin-bottom: calc(3.45vw * var(--main-recipe-size));
}

.recipe-body-afterspace {
  margin-top: calc(4vw * var(--main-recipe-size));
}

.ingredients-list {
  padding-inline-start: 0;
  margin-block-start: 0;
  margin-block-end: 0;
}

.ingredients-list li {
  list-style: none;
  padding-left: calc(2vw * var(--main-recipe-size));
  background-image: url("/bullet-points/point1.png");
  background-repeat: no-repeat;
  background-position-x: left;
  background-position-y: calc(0.5vw * var(--main-recipe-size));
  background-size: calc(1.5vw * var(--main-recipe-size));
}

.ingredients-list li:nth-child(4n+2) {
  background-image: url("/bullet-points/point2.png");
}

.ingredients-list li:nth-child(4n+3) {
  background-image: url("/bullet-points/point3.png");
}

.ingredients-list li:nth-child(4n+4) {
  background-image: url("/bullet-points/point4.png");
}

.editable-ingredients-list {
  margin-top: 0;
  margin-bottom: 0;
}

.editable-ingredients-list li {
  display: flex;
  justify-content: space-between;
}

.select-thing {
  margin-top: 0;
  margin-bottom: calc(1.48vw * var(--main-recipe-size));
  height: calc(4.3vw * var(--main-recipe-size));

  color: #1a1a1a;
}

.add-section-button {
  margin-bottom: calc(3.6vw * var(--main-recipe-size));
}

.inliner * {
  display: inline;
}

/* .nothing-doer {
  margin: 0;
} */

.section-name {
  display: flex;
  align-content: flex-start;
  justify-content: space-between;
  margin-bottom: calc(1vw * var(--main-recipe-size));
}

.section-name h3 {
  margin-top: calc(1.2vw * var(--main-recipe-size));
}

.delete-section {
  height: calc(4vw * var(--main-recipe-size));
}

.delete-ingredient {
  height: calc(2vw * var(--main-recipe-size));
}

input.p-like {
  border: none;
  outline: none;
  font-size: inherit;
  font-family: inherit;
  background: transparent;
  width: calc(8vw * var(--main-recipe-size));
  color: inherit;
  padding: 0;
  text-shadow: 0px 0px calc(0.05vw * var(--main-recipe-size)) #2a2a2a;
}

.recipe-top-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 70vw;
}

.recipe-top-buttons * {
  margin: 10px;
}

.main-and-sidebar {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.contenteditable-title:empty:after {
  content: "<Sem vložte názov receptu>";
  color: gray;
}

.contenteditable-image:empty:after {
  content: "<Sem môžete vložiť link na obrázok>";
  color: gray;
}

.contenteditable-description:empty:after {
  content: "<Sem vložte popis receptu>";
  color: gray;
}

.contenteditable-instructions:empty:after {
  content: "<Sem vložte inštrukcie k receptu>";
  color: gray;
}

.contenteditable-section-name:empty:after {
  content: "<Sem môžete vložiť názov sekcie>";
  color: gray;
}

@media only screen and (max-width: 400px) {
  .recipe-notebook {
    margin-top: 150px;
    margin-bottom: 40px;
    transform: scale(1.4);
  }
}

